--- a/spiros.cabal
+++ b/spiros.cabal
@@ -39,35 +39,45 @@ library
   Prelude.Spiros
 
  build-depends:
-    base >=4.7 && <5
+    base                 >= 4.6   && <4.9
+
   , basic-prelude
   --  extra symbols
   , base-prelude
   --  all of base, modulo conflicting symbols
   , mtl-prelude
   --  Reexports of most definitions from \"mtl\" and \"transformers\".
+  , safe
 
-  , transformers
-  , mtl
+  ,  mtl                  >= 2.2   && <3.0
+  ,  transformers         >= 0.4   && <0.6
 
-  , stm
+  , stm                   >= 2.4   && <3.0
+  -- ??
+
   -- , async
   -- , parallel
 
-  , containers
-  , unordered-containers
-
-  , bytestring
-  , text
-
-  , deepseq
-  , hashable
+  , deepseq              >= 1.3   && <1.5
+  , hashable             >= 1.2.2 && <1.3
   , semigroups
 
-  , split
-  , wl-pprint-text
-  , witherable
-  , safe
+  , text                 >= 1.1   && <1.3
+  , bytestring           >= 0.10  && <0.11
+
+  , unordered-containers >= 0.2   && <0.3
+  , containers           >= 0.5   && <0.6
+  , vector               >= 0.11  && <0.12
+
+  , time                 >= 1.5   && <1.7
+  , process              >= 1.1   && <1.3
+  , directory            >= 1.2   && <1.3
+  -- , shake
+  -- , optparse-applicative >= 0.10  && <0.13
+  -- , optparse-generic     >= 1.1.0 && <1.2
+
+  , split                >= 0.2   && <0.3
+  , wl-pprint-text       >= 1.1.0 && <1.2
 
   -- , interpolatedstring-perl6
   -- needs haskell-src-exts
