--- a/spiros.cabal
+++ b/spiros.cabal
@@ -38,15 +38,18 @@ library
  exposed-modules:
   Prelude.Spiros
 
+ other-modules:
+  Spiros.Utilities
+
  build-depends:
     base                 >= 4.6   && <4.9
 
-  , basic-prelude
-  --  extra symbols
-  , base-prelude
-  --  all of base, modulo conflicting symbols
-  , mtl-prelude
-  --  Reexports of most definitions from \"mtl\" and \"transformers\".
+  -- , basic-prelude
+  -- --  extra symbols
+  -- , base-prelude
+  -- --  all of base, modulo conflicting symbols
+  -- , mtl-prelude
+  -- --  Reexports of most definitions from \"mtl\" and \"transformers\".
   , safe
 
   ,  mtl                  >= 2.2   && <3.0
@@ -60,7 +63,7 @@ library
 
   , deepseq              >= 1.3   && <1.5
   , hashable             >= 1.2.2 && <1.3
-  , semigroups
+  , semigroups           >= 0.18  && <0.19
 
   , text                 >= 1.1   && <1.3
   , bytestring           >= 0.10  && <0.11
