--- a/spiros.cabal
+++ b/spiros.cabal
@@ -52,10 +52,11 @@ library
   -- --  Reexports of most definitions from \"mtl\" and \"transformers\".
   , safe
 
-  ,  mtl                  >= 2.2   && <3.0
-  ,  transformers         >= 0.4   && <0.6
+  , mtl                   >= 2.2   && <3.0
+  , transformers          >= 0.4   && <0.6
 
   , stm                   >= 2.4   && <3.0
+  , vinyl                 >= 0.5   && <0.6
   -- ??
 
   -- , async
