--- a/spiros.cabal
+++ b/spiros.cabal
@@ -43,7 +43,7 @@ library
   Spiros.Utilities
 
  build-depends:
-    base                 >= 4.6   && <4.9
+    base                 >= 4.6   && <5.0
 
   -- , basic-prelude
   -- --  extra symbols
@@ -53,36 +53,37 @@ library
   -- --  Reexports of most definitions from \"mtl\" and \"transformers\".
   , safe
 
-  , mtl                   >= 2.2   && <3.0
-  , transformers          >= 0.4   && <0.6
+  , mtl
+  , transformers
 
-  , stm                   >= 2.4   && <3.0
-  , vinyl                 >= 0.5   && <0.6
+  , stm
+  , vinyl
   -- ??
 
   -- , async
   -- , parallel
 
-  , deepseq              >= 1.3   && <1.5
-  , hashable             >= 1.2.2 && <1.3
-  , semigroups           >= 0.18  && <0.19
+  , deepseq
+  , hashable
+  , semigroups
 
-  , text                 >= 1.1   && <1.3
-  , bytestring           >= 0.10  && <0.11
+  , text
+  , bytestring
 
-  , unordered-containers >= 0.2   && <0.3
-  , containers           >= 0.5   && <0.6
-  , vector               >= 0.11  && <0.12
+  , unordered-containers
+  , containers
+  , vector               
 
-  , time                 >= 1.5   && <1.7
-  , process              >= 1.1   && <1.3
-  , directory            >= 1.2   && <1.3
+  , time
+  , process
+  , directory
   -- , shake
   -- , optparse-applicative >= 0.10  && <0.13
   -- , optparse-generic     >= 1.1.0 && <1.2
 
-  , split                >= 0.2   && <0.3
-  , wl-pprint-text       >= 1.1.0 && <1.2
+  , split
+  , wl-pprint-text
+  , data-default-class
 
   -- , interpolatedstring-perl6
   -- needs haskell-src-exts
