--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,13 @@
-resolver: lts-6.1
-#resolver: lts-7.2
+resolver: lts-7.14
+compiler: ghc-8.0
+
+nix:
+  enable: true
+  pure: true
+  packages: []
 
 packages:
 - .
 
 extra-deps: []
+
