--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,8 @@
-resolver: lts-8.11
-compiler: ghc-8.0.2
+resolver: nightly-2017-12-09
+# compiler: ghc-8.2.2
 
 nix:
-#  enable: true
+  enable: false
   pure: true
   packages: []
 
@@ -10,3 +10,11 @@ packages:
 - .
 
 extra-deps: []
+
+# build:
+#   library-profiling: true 
+#   executable-profiling: true 
+#   haddock: true 
+#   haddock-arguments:
+#     haddock-args:
+#     - --hyperlink-source 
