--- a/spiros.cabal
+++ b/spiros.cabal
@@ -1,5 +1,5 @@
 name:                spiros
-version:             0.0.0
+version:             0.0.1
 synopsis:            my custom prelude
 description:         my custom prelude. diverges from base's; adding, removing, and shadowing.
 homepage:            http://github.com/sboosali/spiros#readme
@@ -11,6 +11,9 @@ copyright:           2016 Spiros Boosalis
 category:            TODO
 build-type:          Simple
 cabal-version:       >=1.10
+tested-with:
+  GHC == 8.2.2
+  GHC == 8.0.2
 
 -- $ stack new PACKAGE spirosboosalis.hsfiles -p "module:MODULE"
 
@@ -44,6 +47,9 @@ library
 
  build-depends:
     base                 >= 4.6   && <5.0
+
+  , protolude            >= 0.2.1
+  -- ^ string-conv
 
   -- , basic-prelude
   -- --  extra symbols
