--- a/spiros.cabal
+++ b/spiros.cabal
@@ -41,11 +41,13 @@ library
  if impl(ghc >= 8.2.1)
    exposed-modules:
      Prelude.Spiros
+--     Data.Finite
      Data.Digit
      -- requires -XDerivingStrategies
  else   
    exposed-modules:
      Prelude.Spiros
+--     Data.Finite
 
  other-modules:
   Prelude.Spiros.Utilities
