--- a/spiros.cabal
+++ b/spiros.cabal
@@ -25,41 +25,45 @@ extra-source-files:
   stack.yaml
 
 --data-files:
-
 --  data/
 
 source-repository head
   type:     git
   location: https://github.com/sboosali/spiros
 
+----------------------------------------
 
 library
  hs-source-dirs:      sources
  default-language:    Haskell2010
  ghc-options:         -Wall
 
- if impl(ghc >= 8.2.1)
-   exposed-modules:
-     Prelude.Spiros
-     Prelude.Spiros.Classes
-     -- Data.Finite
-     Data.Digit
-     -- requires -XDerivingStrategies
- else   
-   exposed-modules:
-     Prelude.Spiros
-     Prelude.Spiros.Classes
-     -- Data.Finite
+ if impl(ghc >= 8.2)
+    ghc-options: -Wcpp-undef
+    -- for `base-feature-macros`
 
- other-modules:
-  Prelude.Spiros.Reexports
-  Prelude.Spiros.Utilities
-  Prelude.Spiros.GUI
-  Prelude.Spiros.Exception
-  Prelude.Spiros.Validator 
+ exposed-modules:
+   Prelude.Spiros
+   Prelude.Spiros.Classes
+     -- Data.Finite
+ -- other-modules:
+   -- exposed for haddock
+   Prelude.Spiros.Reexports
+   Prelude.Spiros.Utilities
+   Prelude.Spiros.System 
+   Prelude.Spiros.Exception
+   Prelude.Spiros.Validator 
+   Prelude.Spiros.GUI
+
+ if impl(ghc >= 8.2.1)
+    exposed-modules:
+      Data.Digit
+      -- requires -XDerivingStrategies
 
  build-depends:
     base                 >= 4.6   && <5.0
+
+  , base-feature-macros  >= 0.1 && < 0.2
 
   , template-haskell     >= 2.11
 
@@ -85,7 +89,9 @@ library
   , transformers
   , text
   , bytestring
-  , deepseq
+  , deepseq 
+    -- >= 1.4.3 
+    -- NFData1, NFData2
   , containers
   , vector
   , time
