--- a/spiros.cabal
+++ b/spiros.cabal
@@ -36,6 +36,10 @@ source-repository head
 library
  hs-source-dirs:      sources
  default-language:    Haskell2010
+
+ include-dirs:     include
+ install-includes: include/base-feature-macros.h
+
  ghc-options:         -Wall
 
  if impl(ghc >= 8.2)
@@ -63,7 +67,7 @@ library
  build-depends:
     base                 >= 4.6   && <5.0
 
-  , base-feature-macros  >= 0.1 && < 0.2
+  -- , base-feature-macros  >= 0.1 && < 0.2
 
   , template-haskell     >= 2.11
 
