--- a/spiros.cabal
+++ b/spiros.cabal
@@ -36,7 +36,12 @@ source-repository head
 -- You can disable the doctests test suite with -f-test-doctests.
 flag test-doctest
   default:     True
-  description: Run the doctests (with the eponymous `doctest`), called the `test documentation` unit (in this cabal file). 
+  description: Run the doctests (with the eponymous `doctest`), called the `test doctest` unit (in this cabal file), to verify the documentation's examples. 
+  manual:      True
+
+flag test-unit
+  default:     True
+  description: Run the unit tests. 
   manual:      True
 
 flag test-static
@@ -171,6 +176,27 @@ test-suite doctest
     base
   , spiros
   , doctest
+
+----------------------------------------
+
+test-suite unit
+ if !flag(test-unit)
+    buildable: False
+
+ hs-source-dirs:      test
+ main-is:             UnitTests.hs
+ other-modules:
+  UnitTests.WarningValidation
+
+ type:                exitcode-stdio-1.0
+ default-language:    Haskell2010
+
+ ghc-options:         -Wall 
+
+ build-depends:
+    base
+  , spiros
+
 
 ----------------------------------------
 
