--- a/spiros.cabal
+++ b/spiros.cabal
@@ -33,6 +33,11 @@ source-repository head
 
 ----------------------------------------
 
+flag examples
+  default:     True
+  description: Build the examples in @examples/@. They are exposed library modules, for better haddocks and for guaranteeing that they typecheck. 
+  manual:      True
+
 -- You can disable the doctests test suite with -f-test-doctests.
 flag test-doctest
   default:     True
@@ -50,15 +55,15 @@ flag test-static
   description: Whether to build the `static` test modules; i.e. the fact that they type check correctly is the test, there's nothing (necessarily) "dynamic" that is tested by running. 
   manual: True
 
-----------------------------------------
+--------------------------------------
 
 library
  hs-source-dirs:      sources
- default-language:    Haskell2010
 
  include-dirs:     include
  install-includes: include/base-feature-macros.h
 
+ default-language:    Haskell2010
  ghc-options:         -Wall
 
  if impl(ghc >= 8.2)
@@ -85,6 +90,12 @@ library
    Prelude.Spiros.Generics
 
  -- the above are conceptually `other-modules:`, but exposed for haddock.
+
+ if flag(examples)
+    hs-source-dirs: examples
+    exposed-modules:
+      Examples_spiros
+      Example.WarningValidation
 
  if impl(ghc >= 8.2.1)
     hs-source-dirs: other-sources
