--- a/cabal.project
+++ b/cabal.project
@@ -1,3 +1,18 @@
-packages:
-  ./spiros
+--------------------------------------------------
 
+packages: ./spiros
+
+--------------------------------------------------
+--------------------------------------------------
+
+documentation:            True
+haddock-hyperlink-source: True
+
+--------------------------------------------------
+
+package *
+  documentation:            True
+  haddock-hyperlink-source: True
+
+--------------------------------------------------
+--------------------------------------------------
